fix posts wrap

--- a/task1.2/styles/media/480.css
+++ b/task1.2/styles/media/480.css
@@ -18,6 +18,7 @@
 
 .posts{
     flex-direction: column;
+    flex-wrap: nowrap;
 }
 
 .posts__item{
