--- a/task1.2/styles/style.css
+++ b/task1.2/styles/style.css
@@ -18,7 +18,7 @@ body {
   margin-right: 40px;
 }
 
-.img {
+.img--w100 {
   width: 100%;
 }
 
